Fix spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,10 +32,6 @@ h3 {
     padding-top: 1rem;
 }
 
-.inner {
-    padding-top: 0;
-}
-
 #main_content {
     padding-top: 0;
 }
